--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: your-image-name:latest
+          tags: rursus/node-api-copy:latest
