--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          tags: docker.io/rursus/node-api-copy
+          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/node-api-copy
           context: .
           push: true
